Revert "fix(webapp): remove width:100% from html/body to fix horizontal scroll"
This reverts commit 33720f5c0411a40a35031defec92403f8fa01e80.

--- a/packages/webapp/src/index.css
+++ b/packages/webapp/src/index.css
@@ -714,6 +714,7 @@
     html,
     body,
     #root {
+        width: 100%;
         height: 100%;
     }
 
